sdks/go/bindings/include/libmoss.h

/* Generated by cbindgen — do not edit manually. */

#ifndef LIBMOSS_H
#define LIBMOSS_H

/* Warning: this file is auto-generated by cbindgen. Do not modify this manually. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Result codes returned by every fallible `moss_*` function.
 */
enum MossResult
#ifdef __cplusplus
  : int32_t
#endif // __cplusplus
 {
  OK = 0,
  ERR_NULL_POINTER = -1,
  ERR_INVALID_ARG = -2,
  ERR_CLOUD = -3,
  ERR_INDEX_NOT_FOUND = -4,
  ERR_MODEL = -5,
  ERR_IO = -6,
  ERR_INTERNAL = -7,
};
#ifndef __cplusplus
typedef int32_t MossResult;
#endif // __cplusplus

typedef struct MossClient MossClient;

typedef struct MossSession MossSession;

typedef struct MossMetadataEntry {
  char *key;
  char *value;
} MossMetadataEntry;

typedef struct MossDocumentInfo {
  char *id;
  char *text;
  struct MossMetadataEntry *metadata;
  uintptr_t metadata_count;
  float *embedding;
  uintptr_t embedding_dim;
} MossDocumentInfo;

typedef struct MossMutationResult {
  char *job_id;
  char *index_name;
  uintptr_t doc_count;
} MossMutationResult;

typedef struct MossMutationOptions {
  bool upsert;
} MossMutationOptions;

typedef struct MossModelRef {
  char *id;
  char *version;
} MossModelRef;

typedef struct MossIndexInfo {
  char *id;
  char *name;
  char *version;
  char *status;
  uintptr_t doc_count;
  char *created_at;
  char *updated_at;
  struct MossModelRef model;
} MossIndexInfo;

typedef struct MossJobStatusResponse {
  char *job_id;
  char *status;
  double progress;
  char *current_phase;
  char *error;
  char *created_at;
  char *updated_at;
  char *completed_at;
} MossJobStatusResponse;

typedef struct MossLoadIndexOptions {
  bool auto_refresh;
  uint64_t polling_interval_secs;
} MossLoadIndexOptions;

typedef struct MossQueryOptions {
  uintptr_t top_k;
  float alpha;
  const char *filter_json;
  const float *embedding;
  uintptr_t embedding_dim;
} MossQueryOptions;

typedef struct MossQueryResultDoc {
  char *id;
  char *text;
  struct MossMetadataEntry *metadata;
  uintptr_t metadata_count;
  float score;
} MossQueryResultDoc;

typedef struct MossSearchResult {
  struct MossQueryResultDoc *docs;
  uintptr_t doc_count;
  char *query;
  char *index_name;
  uint64_t time_taken_ms;
} MossSearchResult;

typedef struct MossRefreshResult {
  char *index_name;
  char *previous_updated_at;
  char *new_updated_at;
  bool was_updated;
} MossRefreshResult;

typedef struct MossSessionOptions {
  const char *model_id;
} MossSessionOptions;

typedef struct MossAddDocsOptions {
  bool upsert;
} MossAddDocsOptions;

typedef struct MossPushIndexResult {
  char *job_id;
  char *index_name;
  uintptr_t doc_count;
  char *status;
} MossPushIndexResult;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Returns the SDK version string (e.g. "0.8.7").
 * The returned pointer is valid for the lifetime of the library — do not free it.
 */
const char *moss_sdk_version(void);

MossResult moss_client_new(const char *project_id,
                           const char *project_key,
                           struct MossClient **out);

void moss_client_free(struct MossClient *client);

MossResult moss_client_create_index(struct MossClient *client,
                                    const char *name,
                                    const struct MossDocumentInfo *docs,
                                    uintptr_t doc_count,
                                    const char *model_id,
                                    struct MossMutationResult **out);

MossResult moss_client_add_docs(struct MossClient *client,
                                const char *name,
                                const struct MossDocumentInfo *docs,
                                uintptr_t doc_count,
                                const struct MossMutationOptions *opts,
                                struct MossMutationResult **out);

MossResult moss_client_delete_docs(struct MossClient *client,
                                   const char *name,
                                   const char *const *doc_ids,
                                   uintptr_t count,
                                   struct MossMutationResult **out);

MossResult moss_client_delete_index(struct MossClient *client, const char *name, bool *out_deleted);

MossResult moss_client_get_index(struct MossClient *client,
                                 const char *name,
                                 struct MossIndexInfo **out);

MossResult moss_client_list_indexes(struct MossClient *client,
                                    struct MossIndexInfo **out,
                                    uintptr_t *out_count);

MossResult moss_client_get_docs(struct MossClient *client,
                                const char *name,
                                const char *const *doc_ids,
                                uintptr_t id_count,
                                struct MossDocumentInfo **out_docs,
                                uintptr_t *out_count);

MossResult moss_client_get_job_status(struct MossClient *client,
                                      const char *job_id,
                                      struct MossJobStatusResponse **out);

MossResult moss_client_load_index(struct MossClient *client,
                                  const char *name,
                                  const struct MossLoadIndexOptions *opts,
                                  struct MossIndexInfo **out);

MossResult moss_client_unload_index(struct MossClient *client, const char *name);

MossResult moss_client_query(struct MossClient *client,
                             const char *name,
                             const char *query,
                             const struct MossQueryOptions *opts,
                             struct MossSearchResult **out);

MossResult moss_client_refresh_index(struct MossClient *client,
                                     const char *name,
                                     struct MossRefreshResult **out);

MossResult moss_client_session(struct MossClient *client,
                               const char *name,
                               const struct MossSessionOptions *opts,
                               struct MossSession **out);

/**
 * Returns a pointer to a null-terminated UTF-8 error description for the most
 * recent failed `moss_*` call on the current thread. The pointer is valid until
 * the next `moss_*` call on the same thread. Returns NULL if no error is stored.
 */
const char *moss_last_error(void);

void moss_session_free(struct MossSession *session);

/**
 * Returns a pointer to the session name. The pointer is valid for the lifetime
 * of the session — do not free it.
 */
const char *moss_session_name(const struct MossSession *session);

uintptr_t moss_session_doc_count(const struct MossSession *session);

MossResult moss_session_add_docs(struct MossSession *session,
                                 const struct MossDocumentInfo *docs,
                                 uintptr_t doc_count,
                                 const struct MossAddDocsOptions *opts,
                                 uintptr_t *out_added,
                                 uintptr_t *out_updated);

MossResult moss_session_delete_docs(struct MossSession *session,
                                    const char *const *doc_ids,
                                    uintptr_t count,
                                    uintptr_t *out_deleted);

MossResult moss_session_get_docs(struct MossSession *session,
                                 const char *const *doc_ids,
                                 uintptr_t id_count,
                                 struct MossDocumentInfo **out_docs,
                                 uintptr_t *out_count);

MossResult moss_session_query(struct MossSession *session,
                              const char *query,
                              const struct MossQueryOptions *opts,
                              struct MossSearchResult **out);

MossResult moss_session_load_index(struct MossSession *session,
                                   const char *index_name,
                                   uintptr_t *out_doc_count);

MossResult moss_session_push_index(struct MossSession *session, struct MossPushIndexResult **out);

void moss_free_string(char *s);

void moss_free_documents(struct MossDocumentInfo *docs, uintptr_t count);

void moss_free_search_result(struct MossSearchResult *result);

void moss_free_index_info(struct MossIndexInfo *info);

void moss_free_index_info_list(struct MossIndexInfo *infos, uintptr_t count);

void moss_free_mutation_result(struct MossMutationResult *result);

void moss_free_push_index_result(struct MossPushIndexResult *result);

void moss_free_job_status_response(struct MossJobStatusResponse *resp);

void moss_free_refresh_result(struct MossRefreshResult *result);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* LIBMOSS_H */